Added procedure for twol testing.

--- a/testing/Makefile
+++ b/testing/Makefile
@@ -407,3 +407,40 @@ savefile:
 	@echo
 	-@diff --side-by-side --width=70 $< $*.afacit > $@
 
+
+
+# TWOL-testing :
+#===============
+
+TWOLC = twolc -utf8
+TYPE = pos
+FILE =
+FILEPOS = twol-pos.in
+FILENEG = twol-neg.in
+
+twol-extract: ../src/twol-foe.txt
+	@echo
+	@echo "*** Extracting twol tests ***"
+	@echo
+	@grep '^!€' $< > $(FILEPOS)
+	@grep '^!\$$' $< > $(FILENEG)
+
+twol-test: ../bin/twol-foe.bin twol-extract
+	@echo
+	@echo "*** Testing twolc rules ***"
+	@echo
+	@printf "install-binary $< \n\
+	pair-test-file $(FILE) twol-$(TYPE).out \n\
+	quit \n" > $(TEMP)/twol-test-script
+	$(TWOLC) < $(TEMP)/twol-test-script
+	@rm -f $(TEMP)/twol-test-script
+
+twol-pos: TYPE=pos
+twol-pos: FILE=$(FILEPOS)
+twol-pos: twol-test
+
+twol-neg: TYPE=neg
+twol-neg: FILE=$(FILENEG)
+twol-neg: twol-test
+
+twol-both: twol-pos twol-neg
