--- a/src/Makefile
+++ b/src/Makefile
@@ -71,14 +71,14 @@ foe.save: ../bin/foe.save
 ../bin/foe.save: ../bin/twol-foe.bin foe-lex.txt noun-foe-morph.txt noun-foe-lex.txt \
         adj-foe-morph.txt adj-foe-lex.txt adv-foe-lex.txt verb-foe-lex.txt \
 	verb-foe-morph.txt pron-foe-lex.txt punct-foe-lex.txt numeral-foe-lex.txt \
-	pp-foe-lex.txt cc-foe-lex.txt cs-foe-lex.txt interj-foe-lex.txt
+	pp-foe-lex.txt cc-foe-lex.txt cs-foe-lex.txt interj-foe-lex.txt det-foe-lex.txt
 	@echo
 	@echo "*** Building foe-lex.save ***" ;
 	@echo
 	printf "compile-source foe-lex.txt noun-foe-morph.txt noun-foe-lex.txt \
         adj-foe-lex.txt adj-foe-morph.txt adv-foe-lex.txt verb-foe-lex.txt \
 	verb-foe-morph.txt pron-foe-lex.txt punct-foe-lex.txt numeral-foe-lex.txt \
-	pp-foe-lex.txt cc-foe-lex.txt cs-foe-lex.txt interj-foe-lex.txt \n\
+	pp-foe-lex.txt cc-foe-lex.txt cs-foe-lex.txt interj-foe-lex.txt det-foe-lex.txt \n\
 	read-rules ../bin/twol-foe.bin \n\
 	compose-result \n\
 	save-result ../bin/foe.save \n\
