... and another foe > fao.

--- a/testing/Makefile
+++ b/testing/Makefile
@@ -28,7 +28,7 @@ TEMP = ../../tmp
 # This variable is holding the filename of the save file:
 # (makes the Makefile truly language independent for
 # the Sami languages)
-SAVEFILE = $(wildcard $(FSTDIR)/foe.save)
+SAVEFILE = $(wildcard $(FSTDIR)/fao.save)
 
 # Copied from old LS makefile:
 # Bond, James Bond
@@ -426,14 +426,14 @@ FILE =
 FILEPOS = twol-pos.in
 FILENEG = twol-neg.in
 
-twol-extract: ../src/twol-foe.txt
+twol-extract: ../src/twol-fao.txt
 	@echo
 	@echo "*** Extracting twol tests ***"
 	@echo
 	@grep '^!€' $< > $(FILEPOS)
 	@grep '^!\$$' $< > $(FILENEG)
 
-twol-test: ../bin/twol-foe.bin twol-extract
+twol-test: ../bin/twol-fao.bin twol-extract
 	@echo
 	@echo "*** Testing twolc rules ***"
 	@echo
