Made routine to compile binary disambiguator.

--- a/src/Makefile
+++ b/src/Makefile
@@ -14,7 +14,7 @@ LEX = fao-lex.txt noun-fao-lex.txt \
 
 ifao.fst: ../bin/ifao.fst
 ../bin/ifao.fst: ../bin/fao.fst ../bin/fao.save ../bin/tok.fst ../bin/abbr.txt \
-	../bin/allcaps.fst
+	../bin/allcaps.fst ../bin/fao-dis.bin
 	@echo
 	@echo "*** Building the inverse ifao.fst ***"
 	@echo
@@ -146,6 +146,15 @@ tok.fst: ../bin/tok.fst
 	quit \n" > /tmp/tok-script
 	@xfst -utf8 < /tmp/tok-script
 	@rm -f /tmp/tok-script
+
+# Let us just make a binary disambiguator
+# It can be used instead of the source file.
+fao-dis.bin: ../bin/fao-dis.bin
+../bin/fao-dis.bin: fao-dis.rle
+	@echo
+	@echo "*** Building a binary disambiguator fao-dis.bin ***" ;
+	@echo
+	@vislcg3 --grammar fao-dis.rle --grammar-only --grammar-bin ../bin/fao-dis.bin
 
 
 # "make clean" is there to remove the binary files at will.
