--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,7 @@
 # This is a makefile that builds the Faroese morphological parser #
 # *************************************************************** #
 
-XFST = fst -utf8
+XFST = xfst -utf8
 LEXC = lexc -utf8
 TWOLC = twolc -utf8
 
