Added comment about the use of the HFST tools.

--- a/src/Makefile.hfst
+++ b/src/Makefile.hfst
@@ -1,5 +1,6 @@
 # *************************************************************** #
 # This is a makefile that builds the Faroese morphological parser #
+# using the HFST tools.                                           #
 # *************************************************************** #
 
 LEX = fao-lex.txt \
